--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="front vertical--middle text--center">
   <div class="layout">
     <div class="layout__item u-12/12 u-4/12-lap-and-up">
-      <img class="animated bounceInLeft" src="/img/madtec.svg" alt="" />
+      <img class="animated bounceInLeft" src="/img/madtec-logo.svg" alt="" />
       <div class="animated zoomIn">
         <h2>Coming soon...</h2>
         <h2>Muy pronto...</h2>
