--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,57 @@
-<div class="front vertical--middle text--center">
-  <div class="layout">
-    <div class="layout__item u-12/12 u-4/12-lap-and-up">
-      <img class="animated bounceInLeft" src="/img/madtec-logo.svg" alt="" />
-      <div class="animated zoomIn">
-        <h2>Coming soon...</h2>
-        <h2>Muy pronto...</h2>
+<div class="front text--center vertical--middle">
+  <div class="layout__item u-10/12 u-4/12-lap-and-up">
+    <div class="layout layout--center">
+      <div id="stage" class="layout__item u-6/12 u-2/12-lap-and-up">
+        <div id="spinner">
+          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+             viewBox="0 0 123.352 172.132" enable-background="new 0 0 123.352 172.132"
+             xml:space="preserve">
+            <linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="90.6787" y1="76.3931" x2="123.3516" y2="76.3931">
+            <stop  offset="0" style="stop-color:#42000D"/>
+            <stop  offset="0.2347" style="stop-color:#42000D"/>
+            <stop  offset="0.2353" style="stop-color:#42000D"/>
+            <stop  offset="0.2942" style="stop-color:#5D0818"/>
+            <stop  offset="0.3522" style="stop-color:#73121E"/>
+            <stop  offset="0.4084" style="stop-color:#851722"/>
+            <stop  offset="0.462" style="stop-color:#901924"/>
+            <stop  offset="0.5102" style="stop-color:#941A25"/>
+            <stop  offset="0.7129" style="stop-color:#B21D2B"/>
+            <stop  offset="0.8265" style="stop-color:#BE1E2D"/>
+            <stop  offset="1" style="stop-color:#BE1E2D"/>
+          </linearGradient>
+          <linearGradient id="SVGID_2_" gradientUnits="userSpaceOnUse" x1="0" y1="86.0659" x2="90.2979" y2="86.0659">
+            <stop  offset="0" style="stop-color:#BE1E2D"/>
+            <stop  offset="0.6735" style="stop-color:#BE1E2D"/>
+            <stop  offset="0.7523" style="stop-color:#B21D2B"/>
+            <stop  offset="0.8929" style="stop-color:#941A25"/>
+            <stop  offset="1" style="stop-color:#42000D"/>
+          </linearGradient>
+          <linearGradient id="SVGID_3_" gradientUnits="userSpaceOnUse" x1="74.4912" y1="83.3813" x2="123.3516" y2="83.3813">
+            <stop  offset="0" style="stop-color:#42000D"/>
+            <stop  offset="0.0765" style="stop-color:#42000D"/>
+            <stop  offset="0.1282" style="stop-color:#4D0012"/>
+            <stop  offset="0.23" style="stop-color:#6B0F1C"/>
+            <stop  offset="0.3367" style="stop-color:#941A25"/>
+            <stop  offset="0.3405" style="stop-color:#971A25"/>
+            <stop  offset="0.377" style="stop-color:#AC1D2A"/>
+            <stop  offset="0.412" style="stop-color:#BA1E2C"/>
+            <stop  offset="0.4439" style="stop-color:#BE1E2D"/>
+            <stop  offset="1" style="stop-color:#BE1E2D"/>
+            </linearGradient>
+            <polygon fill="url(#SVGID_1_)" points="119.546,120.413 123.352,32.373 90.679,69.02 "/>
+            <polygon fill="url(#SVGID_2_)" points="0,172.132 52.19,0 90.298,69.143 "/>
+            <polygon fill="url(#SVGID_3_)" points="123.352,32.373 86.569,134.39 74.491,87.175 "/>
+            <polygon fill="#BE1E2D" points="52.19,0 86.569,134.39 102.496,90.208 "/>
+          </svg>
+        </div>
       </div>
+      <div class="layout__item u-6/12 u-2/12-lap-and-up">
+        <h1 class="animated bounceInRight">mad<span>tec</span></h1>
+      </div>
+    </div>
+    <div class="animated zoomIn">
+      <h2>Coming soon...</h2>
+      <h2>Muy pronto...</h2>
     </div>
   </div>
 </div>
