--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="front text--center vertical--middle">
-  <div class="layout__item u-10/12 u-4/12-lap-and-up">
+  <div class="">
     <div class="layout layout--center">
-      <div id="stage" class="layout__item u-6/12 u-2/12-lap-and-up">
+      <div id="stage" class="logo layout__item u-5/12 u-2/12-lap-and-up">
         <div id="spinner">
           <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
              viewBox="0 0 123.352 172.132" enable-background="new 0 0 123.352 172.132"
@@ -45,7 +45,7 @@
           </svg>
         </div>
       </div>
-      <div class="layout__item u-6/12 u-2/12-lap-and-up">
+      <div class="logo layout__item u-7/12 u-2/12-lap-and-up">
         <h1 class="animated bounceInRight">mad<span>tec</span></h1>
       </div>
     </div>
